--- a/src/App.scss
+++ b/src/App.scss
@@ -12,12 +12,13 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
 
     .launch-photo {
       width: 300px;
       height: 300px;
       border-radius: 5px;
-      margin: 5px 10px;
+      margin: 5px 0;
     }
   }
 }
